# core

./: .gitignore
.github/workflows/: contract-verify.yml  random-lottery-verify.yaml
src/: Qubic.vcxproj  Qubic.vcxproj.filters  public_settings.h  qubic.cpp
src/contracts/: GeneralQuorumProposal.h  QUtil.h  Qx.h
src/ticking/: txs_pool.h
tools/contract-verify/: CMakeLists.txt  README.md
tools/contract-verify/src/: CMakeLists.txt  qubic_contract_verify.cpp
tools/contract-verify/src/lib/: check_branching_looping.cpp  check_branching_looping.h  check_compliance.cpp  check_compliance.h  check_expressions.cpp  check_expressions.h  check_functionlike.cpp  check_functionlike.h  check_names_and_types.cpp  check_names_and_types.h  check_variables.cpp  check_variables.h  defines.h
tools/contract-verify/test/: CMakeLists.txt  contract_verify_test.cpp  test_files_config.h.in
tools/contract-verify/test/testfiles/: test_fail_allocation_new.h  test_fail_array_declaration.h  test_fail_array_indexing.h  test_fail_char_literal.h  test_fail_const_cast.h  test_fail_constructor.h  test_fail_deallocation_delete.h  test_fail_deallocation_delete_array.h  test_fail_dereferencing_arrow.h  test_fail_dereferencing_arrow_star.h  test_fail_destructor.h  test_fail_div.h  test_fail_div_assign.h  test_fail_function_pointer.h  test_fail_global_class.h  test_fail_global_constant.h  test_fail_global_function.h  test_fail_global_struct.h  test_fail_global_variable.h  test_fail_inheritance.h  test_fail_local_variable.h  test_fail_mod.h  test_fail_mod_assign.h  test_fail_name_compound.h  test_fail_name_function.h  test_fail_name_param.h  test_fail_name_var.h  test_fail_namespace_alias.h  test_fail_parameter_pack.h  test_fail_pointer_declaration.h  test_fail_pointer_dereferencing.h  test_fail_preprocessor_define.h  test_fail_preprocessor_include.h  test_fail_scope_resolution_function_call.h  test_fail_scope_resolution_variable.h  test_fail_string_literal.h  test_fail_throw.h  test_fail_type_char.h  test_fail_type_double.h  test_fail_type_float.h  (+29 more)
